<resources>
    <string name="app_name">Url forwarder</string>
    <string name="choose_filter">Choose filter</string>
    <string name="create_filter">Create filter</string>
    <string name="filter_name">Filter name</string>
    <string name="title_incoming_text">Incoming text</string>
    <string name="description_incoming_text">This is the url when shared from the browser</string>
    <string name="title_incoming_subject">Incoming subject</string>
    <string name="description_incoming_subject">This is the title of a web page when shared from the browser</string>
    <string name="title_output_name">Output name</string>
    <string name="title_outgoing_url">Outgoing url</string>
    <string name="title_pattern">Pattern (regex)</string>
    <string name="description_outgoing_url">Enter an url that the incoming text and subject should be forwarded to. If a regex is used, you can append a number to the name to get the matching group.\n\n
For example having output name for text as @url, the pattern http://othersite.com/(.*) and an outgoing url as http://example.com/share?path=@url1, sharing the url http://othersite.com/123 with UrlForwarder would then result in a navigation to the url http://example.com/share?path=123
    </string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="edit_filter">Edit filter</string>
    <string name="empty_message">No filters added!\n\nPress the + button to add some!</string>
    <string name="encode_title">Url Encode the forwarded url. (Recommended)</string>
    <string name="dialog_confirm_delete">Are you sure you want to delete \"%1$s\"?</string>
</resources>
